# rust-i2c-playground

./: .gitignore  Cargo.toml  LICENSE-MIT  Readme.md
src/: lib.rs  main.rs
src/bsp/: i2c_devs.rs  mod.rs  tnh.rs
