[package]
name = "i2c-playground"
version = "0.1.0"
authors = ["jubeormk1 <jubeormk1@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section = "1.1.2"
defmt = { version = "0.3.8" }
# defmt = { version = "0.3.8", features = ["defmt"] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = ["esp32c3"] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
